--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,8 @@
   "extends": [
     "stylelint-config-twbs-bootstrap"
   ],
+  "reportInvalidScopeDisables": true,
+  "reportNeedlessDisables": true,
   "rules": {
     "declaration-property-value-disallowed-list": {
       "border": "none",
