--- a/site/content/docs/5.3/examples/.stylelintrc
+++ b/site/content/docs/5.3/examples/.stylelintrc
@@ -2,6 +2,8 @@
   "extends": [
     "stylelint-config-twbs-bootstrap"
   ],
+  "reportInvalidScopeDisables": true,
+  "reportNeedlessDisables": true,
   "rules": {
     "at-rule-no-vendor-prefix": null,
     "comment-empty-line-before": null,
